--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,4 +15,6 @@
 @import './components/messages';
 @import './components/room';
 @import './components/modal';
+@import './components/modal';
+@import './mediaqueries';
 
