--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,11 +7,11 @@ $off-white: #f7f7f7;
 $github-color: #24292E;
 $light-blue: #464b5e;
 // Font Size
-$font-size-large: 1.8rem;
-$font-size-small: 1.4rem;
+$font-size-large: 19px;
+$font-size-small: 15px;
 // Spacing
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
-$desktop-breakpoint: 45rem;
+$s-size: 13px;
+$m-size: 17px;
+$l-size: 33px;
+$xl-size: 49px;
+$desktop-breakpoint: 768px;
