--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -17,7 +17,15 @@
   justify-content: space-between;
   padding: $s-size 0;
 }
-
+.logoImage{
+  
+  width: 290px;
+  max-width: 100%;
+  display:inline-block;
+  @media only screen and (max-height:470px){
+    opacity: 0.07;
+  }
+}
 .header__title {
   color: white;
   text-decoration: none;
