--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -2,8 +2,10 @@
   border: 1px solid #cacccd;
   height: 50px;
   font-size: $font-size-large;
-  font-weight: 300;
   padding: $s-size;
+  font-family: "Roboto";
+  font-weight: 100;
+  font-style: italic;
 }
 
 .text-input--join {
