--- a/src/styles/components/_messages.scss
+++ b/src/styles/components/_messages.scss
@@ -21,26 +21,85 @@
   // float:right;
   // width: 100%;
   right: 0;
-  color: white;
-  overflow-y: auto;
+  color: #f0f0f0;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
   word-wrap: break-word;
   padding-right: $l-size;
   height: 100%;
   max-height: 70vh;
   width: 100%;
   max-width: 80vw;
+  //max-width:   calc( (var(--vw, 1vw) * 80 )  );
   margin-top: 10vh;
-  
+
+    @media only screen and (max-width:768px){
+      margin-top:10px;
+      max-width: 100vw;
+     // max-width: calc( (var(--vw, 1vw) * 100 )  );
+      padding: 0;
+      max-height: calc( 100vh - 18em);
+      ul{
+        padding:0.3em;
+      }
+    
+  }
   // margin-left: 10%;  
   ul {
     list-style-type: none;
     overflow: hidden;
   }
+
+  &.mainRoom{
+    max-width: 100vw;
+   // max-width: calc( (var(--vw, 1vw) * 100 )  );
+    padding-right: 0;
+    max-height: calc( 100vh - 8em );
+    max-height: calc( (var(--vh, 1vh) * 100 ) - 8em );
+
+      > ul {
+        padding:0 0.3em;
+      }
+      top:3.3em;
+    @media only screen and (max-height:470px){
+      width:100%;
+      max-height: 70vh;
+      top: 0;
+      margin-top:0;
+      max-height: calc( 100vh - 4em );
+      max-height: calc( (var(--vh, 1vh) * 100 ) - 4em );
+    }
+  }
 }
 
 .message {
-  border-bottom: 1px solid fade-out(white, .8);
-  line-height: 1rem;
+  background-color:rgba(255,255,255,0.09);
+  border-radius:10px;
+  padding:0.5em;
+  margin:0.5em 0;
+  line-height: 1em;
+  p{
+    margin:0;
+  }
+  .messageHeader{
+    font-size:14px;
+    line-height: 1em;
+    margin-bottom:0.5em;
+    .messageMeta{
+      opacity:0.2;
+    }
+  }
+  &.isObfuscated{
+    margin-bottom: 1.2em;
+    position: relative;
+    .censoredLabel{
+      position: absolute;
+      font-size: 12px;
+      color: #f5b518;
+      right: 0;
+      bottom: -1.5em;
+    }
+  }
 }
 
 .message__name {
@@ -56,8 +115,9 @@
 }
 
 .message__text {
-  font-size: $font-size-large;
-  line-height: 1.6rem;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  font-style: italic;
 }
 
 .message-with-status {
