--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -38,6 +38,21 @@
   // word-break: break-all;
   max-height: 70vh;
   max-width: 40vw;
-  overflow: auto;    
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */    
   text-align: left;
+}
+
+
+.videoModal{
+  position:fixed;
+  top:0;
+  right:0;
+  width:100vw;
+  width: calc( (var(--vw, 1vw) * 100 )  );
+  height:100vh;
+  background-color:rgba(0,0,0,0.97);
+  iframe{
+    max-width: 100%;
+  }
 }
