--- a/src/styles/components/_messages.scss
+++ b/src/styles/components/_messages.scss
@@ -33,7 +33,7 @@
   //max-width:   calc( (var(--vw, 1vw) * 80 )  );
   margin-top: 10vh;
 
-    @media only screen and (max-width:768px){
+  @media only screen and (max-width:768px){
       margin-top:10px;
       max-width: 100vw;
      // max-width: calc( (var(--vw, 1vw) * 100 )  );
@@ -43,6 +43,9 @@
         padding:0.3em;
       }
     
+  }
+  @media only screen and (max-height:470px){
+    max-height: calc( 100vh - 8.3em);
   }
   // margin-left: 10%;  
   ul {
