--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -55,4 +55,19 @@
   iframe{
     max-width: 100%;
   }
+  @media screen and (min-width:768px){
+    iframe {
+        max-width: 100vw;
+        width: 100vw;
+        height: 100vh;
+    }
+    .closeVideoBut{
+      position: absolute;
+      top:1em;
+      left:0;
+      right:0;
+      margin: auto;
+      width:6.7em;
+    }
+  }
 }
